# Cars-home

./: .env.example  .gitignore  LICENSE  Procfile  README.md  logs.txt  pyproject.toml  requirements.txt
DS/funcs_repo/: configures.py  func_test.py  func_test_2.py  funcs_repo.py  image_process.py  image_process_async.py
DS/models/: model.keras
DS/notebook/: ai_license_plate_detector.ipynb.ipynb
alembic/: env.py
alembic/versions/: 27896de480e6_initial_migration.py  5a8b9144482d_fixed_user_blacklisted_tokens_uselist.py  987f7a73f168_models_change.py  a6f2e5a89562_fixed_user_blacklisted_tokens.py  abdce1c68899_init.py  c40fa6ab95b4_init.py  c897dc6d9d4e_init.py  efe8de57ee7a_init.py
backend/: history_entries.csv  main.py
backend/src/: __init__.py
backend/src/alpr/: model_1.ipynb_
backend/src/conf/: config.py
backend/src/database/: db.py
backend/src/entity/: models.py
backend/src/repository/: car_repository.py  history.py  parking.py  picture.py  tg.py  users.py
backend/src/routes/: __init__.py  admin_routes.py  auth_routes.py  history_routes.py  notification.py  parking_routes.py  picture_routes.py  tg_routes.py  user_routes.py
backend/src/schemas/: car_schema.py  car_schemas.py  history_schema.py  parking_schema.py  picture_schema.py  user_schema.py
backend/src/services/: __init__.py  auth.py  cloudstore.py  constants.py  filters.py  handlers.py  notification.py  registration.py  tg_bot.py
backend/src/tg_bot/: constants.py  filters.py  handlers.py  notification.py  registration.py  tg_bot.py
telegram/: Dockerfile  config.py  constants.py  filters.py  handlers.py  registration.py  requirements.txt  tg_bot.py  tg_schema.py
tg_bot/: constants.py  filters.py  handlers.py  notification.py  registration.py  tg_bot.py  tg_schema.py
