[tool.poetry]
name = "cars-home"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.29"
python-multipart = "^0.0.9"
cloudinary = "^1.40.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
pydantic-settings = "^2.2.1"
aiogram = "^3.5.0"
bs4 = "^0.0.2"
aiohttp = "^3.9.5"
bcrypt = "^4.1.3"
passlib = "^1.7.4"
requests = "^2.31.0"
matplotlib = "^3.8.4"
keras = "2.15.0"
tensorflow-io-gcs-filesystem = {version = "*", python = ">=3.7, <3.12"}
tensorflow = "2.15.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
